--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,3 +14,4 @@
 @import './components/benefits';
 @import './components/projects';
 @import './components/video-about-us';
+@import './components/news';
