--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,12 +1,12 @@
 .header {
     @media screen and(min-width: 768px) {
-    border-bottom: 1px solid #a1a1a1;
-    opacity: 0.5;
+        opacity: 0.5;
     } 
 }
 
 .nav{
     margin-left: auto;
+    padding: 40px 0;
 }
 
 .main-nav {
@@ -45,19 +45,20 @@
 }
 
 .nav-link {
-
     font-weight: 500;
     font-size: 22px;
     line-height: 1.8;
     color: $white-color;
 
     @media screen and(min-width: 768px){
-        
         font-weight: 500;
         font-size: 16px;
-        line-height: 1.43;
+        line-height: 20px;
+        color: #FFFFFF;
+    }
 
-        color: $white-color; 
-        }
-    
+    &:hover,
+    &:focus {
+        color: $accent-color;
+    }
 }
