--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -8,16 +8,16 @@
     @media (min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
-            background-image: url('../images/hero@2x.jpg');
+            // background-image: url('../images/hero@2x.jpg');
         }
 
     @media screen and(min-width: 768px) {
-        margin-top: -30px;
+        margin-top: -110px;
         background-position: center;
     }
 
      @media screen and(min-width: 120px) {
-    
+        margin-top: -120px;
     }
 }
 
